--- a/bibliography.bib
+++ b/bibliography.bib
@@ -726,6 +726,19 @@
    type = {Conference Proceedings}
 }
 
+@article{LayerNorm,
+	title={Layer normalization},
+	author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
+	journal={arXiv preprint arXiv:1607.06450},
+	year={2016}
+}
+
+@article{BatchNorm,
+	title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+	author={Ioffe, Sergey},
+	journal={arXiv preprint arXiv:1502.03167},
+	year={2015}
+}
 @article{KnowledgeDistillation,
    author = {Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
    title = {Distilling the knowledge in a neural network},
@@ -818,8 +831,20 @@ Vision and Pattern Recognition},
 	year={2024},
 	organization={Springer}
 }
-
-
+@article{FastFlux,
+	title={FastFLUX: Pruning FLUX with Block-wise Replacement and Sandwich Training},
+	author={Cai, Fuhan and Guo, Yong and Li, Jie and Li, Wenbo and Fang, Xiangzhong and Chen, Jian},
+	journal={arXiv preprint arXiv:2506.10035},
+	year={2025}
+}
+@inproceedings{ImageNet,
+	title={Imagenet: A large-scale hierarchical image database},
+	author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+	booktitle={2009 IEEE conference on computer vision and pattern recognition},
+	pages={248--255},
+	year={2009},
+	organization={Ieee}
+}
 @inproceedings{SAM,
 	title={Segment anything},
 	author={Kirillov, Alexander and Mintun, Eric and Ravi, Nikhila and Mao, Hanzi and Rolland, Chloe and Gustafson, Laura and Xiao, Tete and Whitehead, Spencer and Berg, Alexander C and Lo, Wan-Yen and others},
@@ -827,6 +852,15 @@ Vision and Pattern Recognition},
 	pages={4015--4026},
 	year={2023}
 }
+
+@inproceedings{SD3,
+	title={Scaling rectified flow transformers for high-resolution image synthesis},
+	author={Esser, Patrick and Kulal, Sumith and Blattmann, Andreas and Entezari, Rahim and M{\"u}ller, Jonas and Saini, Harry and Levi, Yam and Lorenz, Dominik and Sauer, Axel and Boesel, Frederic and others},
+	booktitle={Forty-first international conference on machine learning},
+	year={2024}
+}
+
+
 @inproceedings{adaLN,
 	title={Film: Visual reasoning with a general conditioning layer},
 	author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
