--- a/glossary.tex
+++ b/glossary.tex
@@ -70,7 +70,11 @@
 	description={Adaptive Layer Normalization}
 }
 
-
+\newglossaryentry{MMDiT}
+{
+	name=MMDiT,
+	description={Multi-Modal Diffusion Transformer}
+}
 \newglossaryentry{DDPM}
 {
 	name=DDPM,
