--- a/bibliography.bib
+++ b/bibliography.bib
@@ -783,6 +783,13 @@ Statistics - Machine Learning},
    type = {Electronic Article}
 }
 
+@article{RMSNorm,
+	title={Root mean square layer normalization},
+	author={Zhang, Biao and Sennrich, Rico},
+	journal={Advances in neural information processing systems},
+	volume={32},
+	year={2019}
+}
 
 @misc{DDIM,
    author = {Song, Jiaming and Meng, Chenlin and Ermon, Stefano},
