--- a/glossary.tex
+++ b/glossary.tex
@@ -80,7 +80,11 @@
 	name=DDPM,
 	description={Denoising Diffusion Probablistic Model}
 }
-
+\newglossaryentry{RMSNorm}
+{
+	name=RMSNorm,
+	description={Root Mean Square Normalization}
+}
 \newglossaryentry{DDIM}
 {
 	name=DDIM,
