--- a/Models.tex
+++ b/Models.tex
@@ -34,7 +34,7 @@ The output of the final transformer block is modulated and processed by a linear
 
 \begin{table}[h]
 	\centering
-	\caption{Number of parameters for the individual components of the Transformer block and the total model.}
+	\caption{Number of parameters for the individual components of the Transformer block and the total Pixart-$\Sigma$ model.}
 	\label{Pix_parameter_count}
 	\renewcommand{\arraystretch}{1.2} % Macht die Tabelle etwas luftiger/lesbarer
 	\begin{tabular}{@{}l c@{}} % @{} entfernt den seitlichen Rand für einen cleanen Look
@@ -65,13 +65,20 @@ Third, a compression technique for the KV tokens in the self-attention layers is
 \end{equation} 
 with $f_c$ representing the compression operation. \\
 To conclude, Pixart-$\Sigma$ shows that leveraging a weaker model as a base for introduce improvements helps to accelerate the training process enormously. 
+
+
+
 \section{Flux-dev}
-Flux-dev \cite{Flux} is a publicly available, guidance-distilled rectified flow model based on the commercial model Flux.1. Due to the absence of a publication/paper describing the exact training process, the data set used and the specific design choices, the following section focuses on presenting the models's architecture.
+Flux-dev \cite{Flux} is a publicly available, guidance-distilled rectified flow model based on the commercial model Flux.1 \cite{Flux}. Due to the absence of a publication/paper describing the exact training process, the data set used and the specific design choices, the following section focuses on presenting the models's architecture.
 
 \subsection{Architecture}
-Flux-dev is based on a multi-modal diffusion transformer (\gls{MMDiT}) \cite{SD3} architecture containing 19 double-stream blocks followed by 38 single-stream blocks. In contrast to the Pixart architecture it leverages two distinct text encoders, namely CLIP ViT-L/14 \cite{CLIP} and T5-XXL \cite{T5XXL}. Each double-stream block has mainly four different inputs the guidance vector, the positional encoding for the text and the image, the text features and the image features. \\
-The \textbf{guidance vector} is a combination of the timestep, the guidance and the pooled vector of the clip embedding. The guidance parameter is specific for guidance-distilled models. In guidance distillation, the model is trained to simulate classifier free guidance internally.This speeds up the inference process because in contrast to classifier free guidance where the model is applied twice per inference step only one inference pass per step is needed. The guidance is a scalar which corresponds to the guidance scale in standard classifier free guidance. First, the guidance parameter and the timestep are embedded via \gls{MLP}s  into high dimensional tensors which are summed together. Then the pooled clip vector for the text prompt is embedded via another MLP and added to. The resulting vector, called guidance vector, is used as input in every double-stream and every single-stream block. \\
-Another input to every block is the concatenated positional encoding for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of the patch in the image is created. The 3D vector for the image represents the 2D position $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt flux for videos. However, for image generation the time dimension is always set to zero. The positional encoding 
+Flux-dev is based on a multi-modal diffusion transformer (\gls{MMDiT}) \cite{SD3} architecture containing 19 double-stream blocks followed by 38 single-stream blocks (see fig. \ref{FluxOverview}) adding up to a total of 11.9 billion parameters (see tab. \ref{Flux_parameter_count}). For prompt processing,  it leverages two distinct text encoders, namely CLIP ViT-L/14 \cite{CLIP} and T5-XXL \cite{T5XXL}. For image encoding a \gls{VAE} is used compressing the height $H$ and width $W$ of the image by a factor of eight. Each double-stream block has mainly four inputs: a guidance vector, the positional information of the image patches and the text tokens as well as the text and the image hidden states. Hereby, the text and the image are processed seperately in two distinct streams allwoing the model to apply modality-specific weights. This dual-path approach is the defining characteristic of a \gls{MMDiT}. In contrast, the single-stream blocks have only three inputs as they combine the text and image hidden states and process them together.  \\
+
+The \textbf{guidance vector} is a combination of the timestep, a guidance parameter and the pooled vector of the clip embedding. In guidance distillation, the model is trained to simulate classifier free guidance internally. This speeds up the inference process because in contrast to classifier free guidance where the model is applied twice per inference step only one inference pass per step is needed. The guidance is a scalar which corresponds to the guidance scale in standard classifier free guidance. First, the guidance parameter and the timestep are embedded via \gls{MLP}s  into high dimensional tensors which are summed together. Then the pooled clip vector for the text prompt is embedded via another MLP and added. The resulting vector, called guidance vector, is injected via modulation in every double-stream and every single-stream block. \\
+Another input to both block types is the concatenated \textbf{positional encoding} for the text prompt and the image. First, based on the latent representation of the image, 3D coordinates for the position of every patch in the image is created. The 3D vector for the image represents the 2D positional IDs $(x,y)$ of the patch in the image and a time dimension $t$ for the possibility to adapt Flux-dev for videos. However, for image generation the time dimension is always set to zero. Positional IDs are also assigned to text tokens representing their sequential order and concatenated with the image IDs to jointly apply a positional embedding. In contrast to Pixart models, Flux-dev uses rotary positional embedding (\gls{RoPE}) \cite{RoPE}. The embedded vector is then used in the attention mechanism to rotate the key and query vectors such as the spatial relationships within the image and the sequential structure of the text are preserved. \\
+For the text embedding, the \textbf{text prompt} is tokenized into $512$ tokens such that the model is  capable of processing long and detailed prompts. The T5-XXL encoder embeds the tokens into high-dimensional vectors $(1,512,4096)$ and a linear projection is applied before it is fed into the first double-stream block. The following double-stream blocks always receive the hidden states of the text from the previous block. \\
+The \textbf{image} $(3,H,W)$ is encoded via \gls{VAE} to a latent representation $(16,h=\frac{H}{8}, w=\frac{W}{8})$. To prepare the latents for the transformer, Flux-dev packs $2 \times 2$ neighboring latent pixels into a single patch and therefore increasing the dimension from $16$ to $64$ during the patchify operation while simultaneously reducing the sequence length $N$ to $\frac{h}{2} \cdot \frac{w}{2}$ $(1,N=\frac{h}{2} \cdot \frac{w}{2}, 64)$. These patches are then linearly projected into a higher dimensional embedding space before being fed into the first double block.  \\
+The output, sepcifically the text and image hidden states, of the 19th double-stream block  are concatenated and used as single input to the first single-stream block.
 
 
 
@@ -83,17 +90,50 @@ Another input to every block is the concatenated positional encoding for the tex
 \label{FluxOverview}
 \end{figure}
 
-
-\subsubsection{Single Stream Blocks}
-\subsubsection{Double Stream Blocks}
-
+\subsubsection{Double-Stream Blocks}
+The double-stream blocks (see fig. \ref{SingleDoubleStreamBlock} on the right) are the fundamental building blocks of the first stage of the Flux-dev architecture. In contrast to other diffusion-based models \cite{Pixart_s, SD21, SDXL} the block consists of two separate streams, which process image and text information separately and only exchange information during the attention process. The blocks consist of three main components: the modulation, which incorporates the guidance vector encoding information about the timestep, the guidance, and the pooled CLIP vector, the attention mechanism, which bidirectionally transfers information from text to image features and vice versa and the \gls{MLP}s,  which further process the features. \\
+The \textbf{modulation} of the text and image features is implemented via \gls{adaLN}. As shown in fig. \ref{SingleDoubleStreamBlock}, the guidance vector passes through two separate projection layers, which generate each two sets of scale and shift paramerters for \gls{adaLN}  as well as two gating parameters. The scaling and shifting of the features to incorporate the time, guidance and pooled text conditioning is applied twice, once before the attention mechanism and once before the \gls{MLP}. Subsequently, the gating parameters scale the updated features before they are added to the residual stream. This technique is often applied in very deep neural networks because the linear projection layers producing the gating values are initialized with zeros. Consequently, the gating paramters start at zero, such that the block initially acts as an identity function, which stabilizes the training.  \\
+The \textbf{attention} mechanism enables the exchange of information between the text and the image features. First, the text and image features are processed by seperate linear layers which project them into query, key and value representations and are then normalized via \gls{RMSNorm} \cite{RMSNorm}. Subsequently, they are concatenated into a joint sequence. At this stage the \gls{RoPE}s are integrated into the model by rotating the joint query and key vectors before the attention mechanism is applied such that self- and cross-attention take place simultaneously. Afterwards, the updated text and image features are separated and processed by individual projection layers. \\
+The third main parts are the \textbf{\gls{MLP}s}‚ in each stream which process the updated feature vectors further to increase the representational capacity further. Like the attention mechanism, the MLP is also enclosed by a modulation and connected via a gated residual connection.
+\subsubsection{Single-Stream Blocks}
+The single-stream blocks (see fig. \ref{SingleDoubleStreamBlock} on the left) are the fundamental building blocks of the second stage of the Flux-dev architecture. Their primary components are the self-attention mechanism and the modulation layers. First, the concatenated image and text features $X$ are modulated using \gls{adaLN} where the shift and scale parameters are obtained by processing the guidance vector through a linear layer. Similar to the double-stream architecure, a gating mechanism is applied after the attention mechnism is executed. To optimize throughput, the model uses a fused linear projection where the hidden states for the attention mechanism and the parallel feed-forward path are computed simultaneously.  The outputs of the attention mechanism and the feed-forward path are concatenated together and processed by a subsequent linear projection before the gating mechanism is applied. Finally, the updated features are combined with the residual path to form the final output of the block.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/Background/Flux/SingleDoubleBlocks.pdf}  % adjust filename and width
-	\caption{Single stream block (left) and double stream block (right) of Flux-dev. Graphics are adapted from \cite{FastFlux}}
+	\caption{Single-stream block (left) and double-stream block (right) of Flux-dev. Graphics are adapted from \cite{FastFlux}.}
 	\label{SingleDoubleStreamBlock}
 \end{figure}
 
 
 
+\begin{table}[h]
+	\centering
+	\caption{Number of parameters for the individual components of double-stream block from Flux-dev.}
+	\label{Flux_parameter_count}
+	\renewcommand{\arraystretch}{1.2} % Macht die Tabelle etwas luftiger/lesbarer
+	\begin{tabular}{@{}l c@{}} % @{} entfernt den seitlichen Rand für einen cleanen Look
+		\toprule
+		\textbf{Component} & \textbf{Parameters  (Mio)} \\ 
+		\midrule
+		Double-Stream Image Linear Layer (Attention) & 28.3 \\
+		Double-Stream Image \gls{MLP} & 75.5 \\
+		Double-Stream Image Modulation & 56.6 \\
+		Double-Stream Image Projection & 9.4 \\
+		Double-Stream Text Linear Layer (Attention) & 28.3 \\
+		Double-Stream Text \gls{MLP} & 75.5 \\
+		Double-Stream Text Modulation & 56.6 \\
+		Double-Stream Text Projection & 9.4 \\
+		\midrule
+		\textbf{Total Double-Stream Block} & 339.8 \\
+		\midrule
+		Single-Stream Fused Linear Layer (Linear1) & 66.1\\
+		Single-Stream Projection & 47.2 \\
+		Single-Stream Modulation & 28.3 \\
+		\midrule
+		\textbf{Total Single-Stream Block} & 141.6 \\
+			\midrule
+		\textbf{Total Model (Flux-dev)} & 11,901.4 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
 
