--- a/bibliography.bib
+++ b/bibliography.bib
@@ -783,6 +783,14 @@ Statistics - Machine Learning},
    type = {Electronic Article}
 }
 
+@article{CNF,
+	title={Neural ordinary differential equations},
+	author={Chen, Ricky TQ and Rubanova, Yulia and Bettencourt, Jesse and Duvenaud, David K},
+	journal={Advances in neural information processing systems},
+	volume={31},
+	year={2018}
+}
+
 @article{RMSNorm,
 	title={Root mean square layer normalization},
 	author={Zhang, Biao and Sennrich, Rico},
