--- a/glossary.tex
+++ b/glossary.tex
@@ -58,6 +58,11 @@
 	description={Classifier-Free Guidance}
 }
 
+\newglossaryentry{CNF}
+{
+	name=CNF,
+	description={Continous Normalizing Flow}
+}
 \newglossaryentry{MSE}
 {
 	name=MSE,
