--- a/titel_page.tex
+++ b/titel_page.tex
@@ -26,7 +26,7 @@ born in Gelnhausen (Germany)\\
 
 \normalsize
 This Master Thesis has been carried out by Sebastian Heid at the\\
-IWR in Heidelberg\\
+Computer Vision and Learning Lab in Heidelberg\\
 under the supervision of\\
 \textbf{Prof. Dr. Carsten Rother} \\
 and \\
