--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,12 +36,47 @@
 	pages={1--67},
 	year={2020}
 }
-@article{Pixart_d,
-	title={Pixart-$\delta$}$: Fast and controllable image generation with latent consistency models},
-	author={Chen, Junsong and Wu, Yue and Luo, Simian and Xie, Enze and Paul, Sayak and Luo, Ping and Zhao, Hang and Li, Zhenguo},
-	journal={arXiv preprint arXiv:2401.05252},
+
+@article{yu2022scaling,
+	title={Scaling autoregressive models for content-rich text-to-image generation},
+	author={Yu, Jiahui and Xu, Yuanzhong and Koh, Jing Yu and Luong, Thang and Baid, Gunjan and Wang, Zirui and Vasudevan, Vijay and Ku, Alexander and Yang, Yinfei and Ayan, Burcu Karagol and others},
+	journal={arXiv preprint arXiv:2206.10789},
+	volume={2},
+	number={3},
+	pages={5},
+	year={2022}
+}
+
+@article{mplug,
+	title={mPLUG: Effective and Efficient Vision-Language Learning by Cross-modal Skip-connections. arXiv 2022},
+	author={Li, C and Xu, H and Tian, J and Wang, W and Yan, M and Bi, B and Ye, J and Chen, H and Xu, G and Cao, Z and others},
+	journal={arXiv preprint arXiv:2205.12005},
+	volume={1},
+	year={2022}
+}
+
+@inproceedings{Objects365,
+	title={Objects365: A large-scale, high-quality dataset for object detection},
+	author={Shao, Shuai and Li, Zeming and Zhang, Tianyuan and Peng, Chao and Yu, Gang and Zhang, Xiangyu and Li, Jing and Sun, Jian},
+	booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+	pages={8430--8439},
+	year={2019}
+}
+@article{DSG,
+	title={Davidsonian scene graph: Improving reliability in fine-grained evaluation for text-to-image generation},
+	author={Cho, Jaemin and Hu, Yushi and Garg, Roopal and Anderson, Peter and Krishna, Ranjay and Baldridge, Jason and Bansal, Mohit and Pont-Tuset, Jordi and Wang, Su},
+	journal={arXiv preprint arXiv:2310.18235},
+	year={2023}
+}
+
+@article{DPG,
+	title={Ella: Equip diffusion models with llm for enhanced semantic alignment},
+	author={Hu, Xiwei and Wang, Rui and Fang, Yixiao and Fu, Bin and Cheng, Pei and Yu, Gang},
+	journal={arXiv preprint arXiv:2403.05135},
 	year={2024}
 }
+
+
 @inproceedings{DiT,
 	title={Scalable diffusion models with transformers},
 	author={Peebles, William and Xie, Saining},
@@ -49,6 +84,14 @@
 	pages={4195--4205},
 	year={2023}
 }
+
+@article{Pixart_d,
+	title={Pixart-$\delta$: Fast and controllable image generation with latent consistency models},
+	author={Chen, Junsong and Wu, Yue and Luo, Simian and Xie, Enze and Paul, Sayak and Luo, Ping and Zhao, Hang and Li, Zhenguo},
+	journal={arXiv preprint arXiv:2401.05252},
+	year={2024}
+}
+
 @article{Pixart_a,
 	title={Pixart-$\alpha$: Fast training of diffusion transformer for photorealistic text-to-image synthesis},
 	author={Chen, Junsong and Yu, Jincheng and Ge, Chongjian and Yao, Lewei and Xie, Enze and Wu, Yue and Wang, Zhongdao and Kwok, James and Luo, Ping and Lu, Huchuan and others},
@@ -726,12 +769,6 @@
    type = {Conference Proceedings}
 }
 
-@article{LayerNorm,
-	title={Layer normalization},
-	author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
-	journal={arXiv preprint arXiv:1607.06450},
-	year={2016}
-}
 
 @article{BatchNorm,
 	title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
@@ -1107,15 +1144,6 @@ Vision and Pattern Recognition},
    title = {Gotta go fast when generating data with score-based models},
    journal = {arXiv preprint arXiv:2105.14080},
    year = {2021},
-   type = {Journal Article}
-}
-
-
-@article{FlowMatching,
-   author = {Lipman, Yaron and Chen, Ricky TQ and Ben-Hamu, Heli and Nickel, Maximilian and Le, Matt},
-   title = {Flow matching for generative modeling},
-   journal = {arXiv preprint arXiv:2210.02747},
-   year = {2022},
    type = {Journal Article}
 }
 
