--- a/glossary.tex
+++ b/glossary.tex
@@ -51,6 +51,17 @@
 	description={Maximum Mean Discrepancy}
 }
 
+\newglossaryentry{DPG}
+{
+	name=DPG,
+	description={Dense Prompt Grap}
+}
+
+\newglossaryentry{DSG}
+{
+	name=DSG,
+	description={Dynamic Scene Graph}
+}
 
 \newglossaryentry{CFG}
 {
