--- a/main.tex
+++ b/main.tex
@@ -32,8 +32,10 @@
 \include{theory_generative_models}
 \include{theory_diffusion_models}
 \include{theory_fundamental_NN}
+\include{Distillation}
 \include{theory_metrics}
 \include{Models}
+
 
 \include{experiments}
 \include{results}
