--- a/theory_metrics.tex
+++ b/theory_metrics.tex
@@ -53,3 +53,9 @@ For each category, the prompt follows a specific structure. For the benchmark, 5
 	\caption{Example of how image is investigated for GenEval benchmark  \cite{ghosh2023geneval}.}
 	\label{Geneval}
 \end{figure}
+
+
+\subsection{Dense Prompt Graph Benchmark}
+The goal of the Dense Prompt Graph (\gls{DPG}) benchmark \cite{DPG} is to evaluate the performance of image generation models on long and detailed prompts. It leverages existing datasets, such as COCO \cite{COCO}, PartiPrompts \cite{yu2022scaling} and DSG-1k \cite{DSG}  and enriches their prompts with GPT-4 \cite{GPT4} by adding details, attributes, and spatial relations between objects. A fourth dataset, Object365 \cite{Objects365} is leveraged which is a dataset originally developed for object detection models. The various objects in this dataset are organized into super-cantegories. Typically, one to four objects from the same super-category are randomly sampled, after which GPT-4 generates a dense prompt based on these objects. In total, 1,065 different prompts were collected. \\
+For evaluation, GPT-4 generates binary questions  following the Dynamic Scene Graph (\gls{DSG}) framework \cite{DSG} which organizes the questions in a hierarchical tree where questions in child nodes can only be marked as correct if the questions in their parent nodes are also correct. This strucure ensures that the answers follow the laws of logic. For example, the parent node normally contains an existence question, e.g. "Is there a motorcycle?" while the child nodes contain questions about its attributes, e.g. "Is the motorcycle blue". Therefore, if there is no motorcycle also the question regarding the color is rendered obsolet.
+ The vision language model mPLUG-large \cite{mplug} analyzes the generated images with respect to the questions. The evaluation follows a hierarchical aggregation process where the prompt score is defined as the arithmetic mean of all individual question results associated with a specific prompt, while the final DPG-Bench score is calculated by averaging these individual prompt scores across the entire dataset.
